--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
             <form id="account" method="post" asp-controller="Account" asp-action="Login">
                 <h4>Use your Email and Password to Login</h4>
                 <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
+                @* <div asp-validation-summary="All" class="text-danger"></div> *@
                 <div class="form-group row">
                     <label asp-for="Email" class="col-md-2"></label>
                     <div class="col-md-10">
@@ -39,10 +39,12 @@
                 <p class="col-md-10 offset-md-2">
                     <a asp-action="Register">Sign Up</a>
                 </p>
-
             </form>
-
         </section>
 
     </div>
 </div>
+
+@section Scripts{
+<partial name="_ValidationScriptsPartial"/>
+}
