Functionality for Register POST method and configure ApplicationUser to Identity

--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,4 @@
-@inject Microsoft.AspNetCore.Identity.SignInManager<Microsoft.AspNetCore.Identity.IdentityUser> SignInManager
+@inject Microsoft.AspNetCore.Identity.SignInManager<AppointmentSchedulingApp.Models.ApplicationUser> SignInManager
     @if(SignInManager.IsSignedIn(User)){
 
     } 
