--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
             <form id="account" method="post" asp-controller="Account" asp-action="Login">
                 <h4>Use your Email and Password to Login</h4>
                 <hr />
-                @* <div asp-validation-summary="All" class="text-danger"></div> *@
+                <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group row">
                     <label asp-for="Email" class="col-md-2"></label>
                     <div class="col-md-10">
@@ -18,7 +18,7 @@
                 <div class="form-group row">
                     <label asp-for="Password" class="col-md-2"></label>
                     <div class="col-md-10">
-                        <input type="text" class="form-control" asp-for="Password" />
+                        <input class="form-control" asp-for="Password" />
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
                 </div>
