--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -3,7 +3,7 @@
 <form method="post" asp-action="Register">
     <h4>Create a new Account</h4>
     <hr />
-    @* <div asp-validation-summary="All" class="text-danger"></div> *@
+    <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group row">
         <label class="col-md-2" asp-for="Name"></label>
         <div class="col-md-10">
@@ -23,7 +23,7 @@
     <div class="form-group row">
         <label class="col-md-2" asp-for="Password"></label>
         <div class="col-md-10">
-            <input type="text" asp-for="Password" class="form-control" />
+            <input asp-for="Password" class="form-control" />
             <span asp-validation-for="Password" class="text-danger"></span>
         </div>
     </div>
@@ -31,7 +31,7 @@
     <div class="form-group row">
         <label class="col-md-2" asp-for="ConfirmPassword"></label>
         <div class="col-md-10">
-            <input type="text" asp-for="ConfirmPassword" class="form-control" />
+            <input asp-for="ConfirmPassword" class="form-control" />
             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
     </div>
