--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,11 @@
 @inject Microsoft.AspNetCore.Identity.SignInManager<AppointmentSchedulingApp.Models.ApplicationUser> SignInManager
     @if(SignInManager.IsSignedIn(User)){
-
+        <form method="POST" id="logoutForm" asp-controller="Account" asp-action="LogOff">
+            <ul class="nav navbar-nav">
+                <li class="nav-link text-white">Hello, @User.Identity.Name</li>
+                <li ><a class="nav-link text-white" href="javascript:document.getElementById('logoutForm').submit()">Log Out</a> </li>
+            </ul>
+        </form>
     } 
     else{
         <ul class="nav navbar-nav">
