--- a/Views/Shared/_AddEditAppointmentModal.cshtml
+++ b/Views/Shared/_AddEditAppointmentModal.cshtml
@@ -18,6 +18,10 @@
                         <label for="patientTitle">Select Patient</label>
                         <select id="patientId" asp-items="@(new SelectList(ViewBag.PatientList,"Id","Name"))" class="form-control"></select>
                     </div>
+                    <div class="form-group">
+                        <label for="appointmentDate">Start Date Time</label>
+                        <input class="form-control" id="appointmentDate"/>
+                    </div>
                      <div class="form-group">
                         <label for="duration">Duration</label>
                         <select id="duration" asp-items="ViewBag.Duration" class="form-control"></select>
